--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,13 @@ h1{
   letter-spacing: .2px;
 }
 
+h3 {
+  font-size: 24px;
+  letter-spacing: .2px;
+  text-transform: capitalize;
+  font-weight: 400;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -25,7 +32,7 @@ h1{
   font-weight: 700;
   text-transform: uppercase;
   color: #2b2b2b;
-  padding-left:10%;
+  padding-left:5%;
 }
 .btn1{
   /*#00a8e8*/
@@ -40,7 +47,7 @@ h1{
 }
 
 #navbarRight{
-  margin-left: 55%;
+  margin-left: 62.5%;
 }
 
 
@@ -94,7 +101,6 @@ span {
   border-radius: 50%;
   margin: 0 10px 0 0;
     /*margin-bottom: -30px;*/
-
 }
 
 .content {
@@ -163,6 +169,38 @@ span {
     opacity: 0;
   }
 }
+
+/*API Section*/
+
+#API {
+  margin-top: 100px;
+
+}
+
+.tech{
+  flex-wrap: wrap;
+  margin-left: 5%;
+  /*box-sizing: border-box;*/
+}
+
+.tech-image{
+  width: 70%;
+  padding-top: 30%;
+  /*background-size: cover;*/
+  /*background-position: center;*/
+
+}
+.tech-imageShop{
+  width: 72%;
+  /*padding-top: 2%;*/
+  padding: 40px;
+}
+
+.tech-imageBab{
+  width: 72%;
+  /*padding-top: 2%;*/
+  padding: 40px;
+}
 #particles-js {
   position: absolute;
   top: 0;
@@ -181,4 +219,18 @@ span {
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
+}
+
+/*footer */
+
+#contact {
+  margin-top: 100px;
+  text-align: center;
+  margin-bottom: 40px;
+
+}
+
+.titleCont{
+  position: relative;
+
 }
