--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,6 @@ h3 {
   display: inline-block;
   background-color: #00a8e8;
   border-radius: 3.75px;
-
 }
 
 .box{
@@ -225,6 +224,55 @@ span {
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
+}
+/*portfilo*/
+
+.projectbox{
+  width: 320px;
+  height: 250px;
+  /*border-radius: 1%;*/
+  border-radius: 7.5px;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 0 8px rgb(0, 0, 0, .2);
+}
+
+
+.thumbnail-overlay{
+    opacity: 0;
+    position: absolute;
+    background-color: rgba(0, 0, 0, .6);
+    width: 320px;
+    height: 250px;
+    border-radius: 7.5px;
+    padding: 40px;
+    transition: all ease 200ms;
+}
+
+.thumbnail-overlay:hover{
+  opacity: 0.9;
+  border-radius: 7.5px;
+  background-color: #00a8e8;
+}
+
+.thumbnail-overlay p {
+  text-align: center;
+  font-size: 0.8em;
+}
+
+.portbtn
+{
+  color: #fff;
+  display: inline-block;
+  background-color: #00a8e8;
+  border-radius: 3.75px;
+}
+
+.external {
+  overflow: hidden;
+  position: relative;
+  /*visibility: hidden;*/
+  /*display: none;*/
 }
 
 /*footer */
