--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,15 @@ span {
   box-shadow: 0 0 8px rgb(0, 0, 0, .2);
 }
 
+.testanimation {
+  -webkit-animation-duration: 3s;
+  -webkit-animation-delay: 2s;
+  -webkit-animation-iteration-count: infinite;
+
+  -moz-animation-duration: 3s;
+  -moz-animation-delay: 2s;
+  -moz-animation-iteration-count: infinite;
+}
 
 .thumbnail-overlay{
     opacity: 0;
