--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ span {
 {
   color: #fff;
   display: inline-block;
-  background-color: #00a8e8;
+  background-color: black;
   border-radius: 3.75px;
 }
 
