--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ h1{
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 26px;
   letter-spacing: .2px;
   text-transform: capitalize;
   font-weight: 400;
@@ -16,6 +16,11 @@ h3 {
   padding: 0;
   margin: 0;
 }
+
+strong {
+  font-weight: bold;
+}
+
 /*Nav*/
 
 .header {
@@ -172,6 +177,14 @@ span {
   100% {
     opacity: 0;
   }
+}
+
+/*About*/
+
+#proglink{
+  text-decoration: underline;
+  font-weight: bold;
+  color: #00a8e8;
 }
 
 /*API Section*/
